@@ -7,6 +7,7 @@ if sys.version < '2.4':
     from sets import ImmutableSet as frozenset
 
 from routes import request_config
+from routes.lru import LRU
 from routes.util import controller_scan, MatchException, RoutesException
 from routes.route import Route
 
@@ -98,7 +99,7 @@ class Mapper(object):
         self.matchlist = []
         self.maxkeys = {}
         self.minkeys = {}
-        self.urlcache = {}
+        self.urlcache = LRU(4000)
         self._created_regs = False
         self._created_gens = False
         self.prefix = None
