@@ -2,6 +2,9 @@ Routes Changelog
 ========================
 
 -- 1.10 (**tip**)
+* Adding LRU cache instead of just dict for caching generated routes. This
+  avoids slow memory leakage over long-running and non-existent route
+  generation.
 * Adding URLGenerator object.
 * Adding redirect routes.
 * Static routes can now interpolate variable parts in the path if using {}
